# stack

./: .travis.yml  CMakeLists.txt  README.md
examples/: main.cpp
include/: allocator.hpp  stack.hpp
tests/: count.cpp  empty.cpp  pop.cpp  push.cpp  top.cpp
